--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,38 +6,58 @@
   </ion-header>
   <ion-content>
     <ion-searchbar [(ngModel)]="filter.text"></ion-searchbar>
-    <div class="ion-padding">
-      <ion-chip color="primary">
-        <ion-select
-          interface="popover"
-          [(ngModel)]="selectedPokemonList"
-          (ionChange)="selectPokemonList($event)"
-        >
-          <ion-select-option
-            *ngFor="let list of pokemonLists; let i = index"
-            [value]="list"
+    <ion-grid>
+      <ion-row>
+        <ion-col size="10">
+          <ion-chip color="primary">
+            <ion-select
+              interface="popover"
+              [(ngModel)]="selectedPokemonList"
+              (ionChange)="selectPokemonList($event)"
+            >
+              <ion-select-option
+                *ngFor="let list of pokemonLists; let i = index"
+                [value]="list"
+              >
+                {{ list.name }}
+              </ion-select-option>
+            </ion-select>
+          </ion-chip>
+          <ion-chip
+            [color]="filter.checked ? 'primary' : 'light'"
+            (click)="filter.checked = !filter.checked"
           >
-            {{ list.name }}
-          </ion-select-option>
-        </ion-select>
-      </ion-chip>
-      <ion-chip
-        [color]="filter.checked ? 'primary' : 'light'"
-        (click)="filter.checked = !filter.checked"
-      >
-        <ion-icon class="ion-no-margin" name="checkmark"></ion-icon>
-      </ion-chip>
-      <ion-chip
-        [color]="filter.unchecked ? 'primary' : 'light'"
-        (click)="filter.unchecked = !filter.unchecked"
-      >
-        <ion-icon class="ion-no-margin" name="close"></ion-icon>
-      </ion-chip>
-      <ion-chip style="float: right;">
-        {{ getCheckedPokemon() }} / {{ pokemonList.length }}
-        <!-- <ion-icon name="checkmark"></ion-icon> -->
-      </ion-chip>
-    </div>
+            <ion-icon class="ion-no-margin" name="checkmark"></ion-icon>
+          </ion-chip>
+          <ion-chip
+            [color]="filter.unchecked ? 'primary' : 'dark'"
+            (click)="filter.unchecked = !filter.unchecked"
+          >
+            <ion-icon class="ion-no-margin" name="close"></ion-icon>
+          </ion-chip>
+        </ion-col>
+        <ion-col>
+          <ion-chip style="float: right;">
+            {{ getCheckedPokemon() }} / {{ pokemonList.length }}
+          </ion-chip>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>
+          <ion-chip
+            *ngFor="let type of pokemonTypes | objectKeys"
+            [ngClass]="!filter.types[type] ? 'type-chip-active' : ''"
+            (click)="filter.types[type] = !filter.types[type]"
+            [color]="filter.types[type] ? 'primary' : 'dark'"
+          >
+            <ion-img [src]="pokemonTypes[type]"></ion-img>
+          </ion-chip>
+          <ion-chip color="primary" (click)="initFilter()">
+            <ion-icon class="ion-no-margin" name="refresh"></ion-icon>
+          </ion-chip>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
     <ion-grid>
       <ion-row>
         <ion-col
@@ -52,26 +72,26 @@
             [color]="pokemon.checked ? 'secondary' : 'light'"
             (click)="checkPokemon(pokemon)"
           >
-            <ion-button
-              *ngIf="pokemon.variety"
-              color="dark"
-              fill="clear"
-              style="position: absolute; right: 0; z-index: 100;"
-              (click)="showPokemonInfo(pokemon); $event.stopPropagation()"
-            >
-              <ion-icon name="ellipsis-horizontal" icon-only></ion-icon>
-            </ion-button>
             <ion-card-header>
               <ion-card-subtitle>
                 #{{ pokemon.id }}
                 <ion-img
                   *ngFor="let type of pokemon.types"
                   style="float: right;"
-                  [src]="pokemonIcons[type]"
+                  [src]="pokemonTypes[type]"
                 >
                 </ion-img>
               </ion-card-subtitle>
-              <ion-card-title>{{ pokemon.name }}</ion-card-title>
+              <ion-card-title>
+                {{ pokemon.name }}
+                <ion-badge
+                  *ngIf="pokemon.checked"
+                  color="light"
+                  style="float: right;"
+                >
+                  {{ pokemon.count || 0 }}
+                </ion-badge>
+              </ion-card-title>
             </ion-card-header>
             <ion-card-content>
               <ion-img [src]="pokemon.imageUrl"></ion-img>
